# fastvn-programming-exercise

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile_old  README.md  abstract_text.h  chapter.cpp  chapter.h  character.cpp  character.h  compile_commands_2.json  compositor.cpp  compositor.h  data.h  debug.h  displayable.h  files.h  image.cpp  image.h  imagebase.h  index.json  json-loader.cpp  json-loader.h  jsonloader.h  loader.h  main.cpp  main.xcf  new_text.cpp  schedule.h  softwaretextaaaaaa.h  structures.cpp  structures.h  test-chapter0.json  test3  testmain.cpp  text.h  transforms.h  trees.cpp  trees.h  (+25 more)
.cache/clangd/index/: data.h.8AD3C76B28B8F473.idx  main.cpp.3DB635EA356E560D.idx  structures.h.3FB6294A227FFB1B.idx
assets/scripts/: test-chapter0.json
data/assets/scripts/: index.json
gcm.cache/: StoryDialogue.gcm
legacy/: CMakeLists.txt  character.cpp  character.h  debug.h  image.cpp  image.h  json-loader.cpp  schedule.h  structures.h  trees.cpp  video-sdl-common.cpp  video-sdl-common.h  video-sdl-gpu-text.cpp  video-sdl-software.cpp  video-sfml-compositor.h  video-sfml.h
src/: CMakeLists.txt
src/gfx/characters/: characters.h
src/gfx/window/: compositor.h  window.h
src/parser/: ast.h  ast_adapted.h  config.h  display_attribute_type.cpp  display_attribute_type.hpp  error_handler.h  parser.cpp  parser.h  parser_def.h  printer.h  translation.cpp
src/parser/metasyntax/: ast.h  ast_adapted.h  config.h  error_handler.h  metasyntax.cpp  metasyntax.h  metasyntax_def.h  printer.h  version.h
src/parser/scriptflow/: ast.h  ast_adapted.h  config.h  error_handler.h  scriptflow.cpp  scriptflow.h  scriptflow_def.h
src/state_machine/: state_machine.cpp
src/util/: files.h  output.h  structures.h
src/versioning/: versioning.cpp  versioning.h
tests/: gfx.sdl.test.cpp  metasyntax.test.cpp  parser_verifier.cpp  sample.txt  scriptflow.sample.txt  scriptflow.test.cpp
